# Ruffnova

./: .gitignore  AGENT.md  Info-iOS.plist  Info.plist  LICENSE  LICENSE-MIT  PRODUCT_IMPLEMENTATION_PLAN.md  Package.swift  README.md  RELEASE_AUDIT.md  RuffleBridgingHeader.h  Ruffnova.entitlements  build_app.sh  build_engine.sh  setup.sh
App/: AppDelegate.swift  RuffleApp.swift
App/Commands/: AppCommandRouter.swift  RuffleCommands.swift
App/Environment/: AppState.swift
App/Toolbar/: AppToolbar.swift
App/Windows/: AboutWindow.swift  ContentView.swift  WindowAppearancePolicy.swift
App/iOS/: IOSAppDelegate.swift
CRuffleFFI/: dummy.c  module.modulemap  ruffle_ffi.h
Resources/: en.json  ja.json  ko.json  zh-Hans.json  zh-Hant.json
Ruffnova.icon/: icon.json
Ruffnova.xcodeproj/: project.pbxproj
UML/: 00_ArchitectureOverview.puml  01_AppStartup.puml  02_FileOpening.puml  03_RenderLoop.puml  04_InputEventFlow.puml  05_PermissionFlow.puml  06_FFIBridge.puml  07_PersistenceFlow.puml  08_LibrarySearch.puml  09_PlatformAbstraction.puml  10_ClassDiagram_Core.puml  11_ClassDiagram_Player.puml  12_ClassDiagram_Library.puml  13_ClassDiagram_Shared.puml  14_ClassDiagram_FFI.puml  15_ClassDiagram_Views.puml  FEATURE_IMPLEMENTATION_PLAN.md
docs/: ARCHITECTURE.md  CODE_STYLE.md  DESIGN_SPEC.md  UI_RULES.md
engine/: Cargo.toml  README.md  analyze_swf.rs
engine/ffi/: Cargo.toml  build.rs  cbindgen.toml
engine/ffi/include/: ruffle_ffi.h
engine/ffi/src/: lib.rs  player.rs  renderer.rs  types.rs
patches/: apply.sh
swfs/: abduction.swf  amanda.swf
(+101 files in other folders)
