[package]
name = "ruffle_ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ruffle_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
ruffle_core = { path = "../core", features = ["audio", "mp3", "aac", "nellymoser", "default_compatibility_rules"] }
ruffle_render = { path = "../render" }
ruffle_render_wgpu = { path = "../render/wgpu" }
ruffle_video_software = { path = "../video/software" }
ruffle_frontend_utils = { path = "../frontend-utils", features = ["cpal", "fs", "navigator"] }
url = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
wgpu = { workspace = true }
futures = { workspace = true }
bytemuck = { workspace = true }
async-channel = { workspace = true }
fontdb = "0.23"

[build-dependencies]
cbindgen = "0.29"
